@@ -10,6 +10,18 @@ buildscript {
     }
 }
 
+plugins {
+    id("org.jlleitschuh.gradle.ktlint") version "12.0.3"
+}
+
+subprojects {
+    if (project.projectDir.exists()) {
+        apply {
+            plugin("org.jlleitschuh.gradle.ktlint")
+        }
+    }
+}
+
 project.ext {
     dbSchemaContainerName = 'tolgee_postgres_dbschema'
 }
@@ -20,10 +32,6 @@ if (System.getenv().containsKey("VERSION")) {
     project.version = 'local'
 }
 
-configurations {
-    ktlint
-}
-
 apply plugin: 'idea'
 
 repositories {
@@ -31,14 +39,6 @@ repositories {
 }
 
 def unpackTarget = "${project.buildDir}/dependency"
-
-dependencies {
-    ktlint("com.pinterest:ktlint:0.43.2") {
-        attributes {
-            attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
-        }
-    }
-}
 
 project(':server-app').afterEvaluate {
     task unpack(type: Copy) {
@@ -90,7 +90,7 @@ project(':server-app').afterEvaluate {
     task startDbChangelogContainer {
         doLast {
             exec {
-                commandLine "docker", "run", "-e", "POSTGRES_PASSWORD=postgres", "-d", "-p55432:5432", "--name", dbSchemaContainerName, "postgres:13"
+                commandLine "docker", "run", "-e", "POSTGRES_PASSWORD=postgres", "-d", "-p55438:5432", "--name", dbSchemaContainerName, "postgres:13"
             }
             Thread.sleep(5000)
         }
@@ -98,13 +98,13 @@ project(':server-app').afterEvaluate {
 
     task stopDbChangelogContainer(type: Exec) {
         commandLine "docker", "rm", "--force", dbSchemaContainerName
-        mustRunAfter project(':data').tasks.findByName("diffChangeLog")
-        mustRunAfter project(':ee-app').tasks.findByName("diffChangeLog")
+        mustRunAfter project(':data').tasks.findByName("diffChangelog")
+        mustRunAfter project(':ee-app').tasks.findByName("diffChangelog")
     }
 
     task diffChangeLog {
         subprojects.forEach({
-            it.tasks.findByName("diffChangeLog")?.mustRunAfter(project(':server-app').tasks.findByName("bootRun"))
+            it.tasks.findByName("diffChangelog")?.mustRunAfter(project(':server-app').tasks.findByName("bootRun"))
         })
 
         project(':server-app').tasks.findByName("bootRun").mustRunAfter(startDbChangelogContainer)
@@ -113,10 +113,11 @@ project(':server-app').afterEvaluate {
         finalizedBy = [
                 startDbChangelogContainer,
                 project(':server-app').tasks.findByName("bootRun"),
-                project(':data').tasks.findByName("diffChangeLog"),
+                project(':data').tasks.findByName("diffChangelog"),
+                project(':ee-app').tasks.findByName("diffChangelog"),
         ]
 
-        def billingDiffChangelog = project(':billing-app').tasks.findByName("diffChangeLog")
+        def billingDiffChangelog = project(':billing-app').tasks.findByName("diffChangelog")
 
         if (billingDiffChangelog != null) {
             finalizedBy.add(billingDiffChangelog)
@@ -131,23 +132,14 @@ project(':server-app').afterEvaluate {
     }
 }
 
-task ktlint(type: JavaExec, group: "verification") {
-    description = "Check Kotlin code style."
-    classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
-    args "**/*.kt", "!**/data/PluralData.kt", '../billing/**/*.kt'
-}
-
-task ktlintFormat(type: JavaExec, group: "formatting") {
-    description = "Fix Kotlin code style deviations."
-    classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
-    args "-F", "**/*.kt", "!**/data/PluralData.kt", '../billing/**/*.kt'
-    jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+ktlint {
+    debug = true
+    verbose = true
 }
 
 subprojects {
     task allDeps(type: DependencyReportTask) {}
+    ext['hibernate.version'] = hibernateVersion
 
     tasks.withType(Test) {
         testLogging {
